# zoran-benchmark-mimetic

./: CHANGELOG.md  CONTRIBUTING.md  README.md  README_zbm (1).md  SECURITY.md  pyproject.toml  quickstart.py
src/zbm/: core.py
tests/: test_core.py
